Got working... now to clean up.