@@ -1,13 +1,63 @@
-FROM ruby:latest
+FROM ubuntu
 
 RUN DEBIAN_FRONTEND=noninteractive apt-get update -y
-RUN DEBIAN_FRONTEND=noninteractive apt-get install -y default-jdk
+
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y software-properties-common 
+
+# Install Oracle Java 8 from https://github.com/dockerfile/java/blob/master/oracle-java8/Dockerfile
+RUN \
+  echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | debconf-set-selections && \
+  add-apt-repository -y ppa:webupd8team/java && \
+  DEBIAN_FRONTEND=noninteractive apt-get update && \
+  DEBIAN_FRONTEND=noninteractive apt-get install -y oracle-java8-installer && \
+  rm -rf /var/lib/apt/lists/* && \
+  rm -rf /var/cache/oracle-jdk8-installer
+
+ENV JAVA_HOME /usr/lib/jvm/java-8-oracle
+
+ENV RUBY_MAJOR 2.2
+ENV RUBY_VERSION 2.2.2
+ENV RUBY_DOWNLOAD_SHA256 5ffc0f317e429e6b29d4a98ac521c3ce65481bfd22a8cf845fa02a7b113d9b44
+
+# some of ruby's build scripts are written in ruby
+# we purge this later to make sure our final image uses what we just built
+RUN DEBIAN_FRONTEND=noninteractive apt-get update \
+  && DEBIAN_FRONTEND=noninteractive apt-get install -y autoconf bison build-essential libssl-dev libyaml-dev libreadline6-dev zlib1g-dev libncurses5-dev libffi-dev libgdbm3 libgdbm-dev curl ruby \
+  && rm -rf /var/lib/apt/lists/* \
+  && mkdir -p /usr/src/ruby \
+  && curl -fSL -o ruby.tar.gz "http://cache.ruby-lang.org/pub/ruby/$RUBY_MAJOR/ruby-$RUBY_VERSION.tar.gz" \
+  && echo "$RUBY_DOWNLOAD_SHA256 *ruby.tar.gz" | sha256sum -c - \
+  && tar -xzf ruby.tar.gz -C /usr/src/ruby --strip-components=1 \
+  && rm ruby.tar.gz \
+  && cd /usr/src/ruby \
+  && autoconf \
+  && ./configure --disable-install-doc \
+  && make -j"$(nproc)" \
+  && make install \
+  && DEBIAN_FRONTEND=noninteractive apt-get purge -y --auto-remove bison libgdbm-dev ruby \
+  && rm -r /usr/src/ruby
+
+# skip installing gem documentation
+RUN echo 'gem: --no-rdoc --no-ri' >> "$HOME/.gemrc"
+
+# install things globally, for great justice
+ENV GEM_HOME /usr/local/bundle
+ENV PATH $GEM_HOME/bin:$PATH
+
+ENV BUNDLER_VERSION 1.10.3
+
+RUN gem install bundler --version "$BUNDLER_VERSION" \
+  && bundle config --global path "$GEM_HOME" \
+  && bundle config --global bin "$GEM_HOME/bin"
+
+# don't create ".bundle" in all our apps
+ENV BUNDLE_APP_CONFIG $GEM_HOME
 
 RUN gem install s3_website
+# get .jar installed in image
+RUN s3_website push --dry-run; exit 0
+RUN mkdir /website
+COPY s3_website.yml /website/s3_website.yml
+WORKDIR /website
 
-COPY s3_website.yml /s3_website.yml
-
-#ENV _JAVA_OPTIONS="-Xmx1g -XX:-UseConcMarkSweepGC"
-ENV _JAVA_OPTIONS="-Xmx1g -Xms1g -XX:-UseGCOverheadLimit
-
-#ENTRYPOINT ["s3_website"] 
+ENTRYPOINT ["s3_website"] 
